more tests and further code improvements